# mcpp

./: .gitignore  CMakeLists.txt  Parameters.txt  README.txt
examples/: single-spin-flip.py  xy.ip
machines/: setup-merlin.sh  submit-merlin.sh  submit-merlin5.sh
scripts/: finite-size-scaling.py  fss-sliders.py  mcrg.py  plot-last-configuration.py  structure-factor.py
src/: main.cpp  parapack_register.cpp  utilities.h
src/hamiltonians/: hamiltonian_factory.h  hamiltonian_list.h  xy_dipolar.h  xy_dipolar_disordered.h  xy_exchange.h  xy_hamiltonian.h  xy_j1j2.h  xy_shape_anisotropy.h
src/models/: mcrg_worker.h  xy.h
src/observables/: $  observable.h  observables.h
src/observables/basic-observables/: basic_observables.h  component_observables.h
src/observables/datatypes/: histogram.h  histogram_evaluator.h
src/observables/field-histogram/: field_histogram.h  field_histogram_evaluator.h
src/observables/llg/: llg.h  llg_autocorrelation.h  llg_energy_timeseries.h  llg_timeseries.h  muon_depolarization.h
src/observables/mcrg/: interactions.h  mcrg.h  mcrg_evaluator.h  reductions.h  utilities.h
src/observables/spin-autocorrelation/: spin_autocorrelation.h
src/observables/structure-factor/: structure_factor.h
src/single-spin-flip/: ssf.h  ssf.hpp
src/special-observables/: mcrg.h  special_observables.h
src/special-observables/mcrg/: interactions.h  mcrg.h  reductions.h
src/special-observables/spin-autocorrelation/: spin_autocorrelation.h
src/special-observables/structure-factor/: structure_factor.h
src/version/: version.h  version.h.in
test/: advanced.py  algorithm_test.py  basic.py  compile_test.py  deep_test.py  hamiltonian_test.py  import_test.py  model_test.py  observable_test.py  options.py.example  results.py
